--- a/themes/neon-city-green.preview.sable.css
+++ b/themes/neon-city-green.preview.sable.css
@@ -10,11 +10,11 @@ fullThemeUrl: https://raw.githubusercontent.com/SableClient/themes/main/themes/n
 */
 
 .sable-theme-preview {
-  --sable-bg-container: linear-gradient(to top, hsl(120, 100%, 3%), hsl(120, 100%, 2%));
-  --sable-bg-on-container: hsla(270, 20.5%, 90%, 0.85);
-  --sable-surface-container: hsla(300, 30%, 5%, 0.67);
-  --sable-surface-container-line: hsla(270, 35%, 30.94%, 0.85);
-  --sable-surface-on-container: hsla(270, 0%, 95%, 1);
-  --sable-primary-main: hsla(270, 25%, 34%, 0.85);
-  --sable-primary-on-main: hsla(270, 12.5%, 85%, 0.85);
+  --sable-bg-container: linear-gradient(to top, hsl(120, 100%, 7%), hsl(220, 100%, 2%));
+  --sable-bg-on-container: hsla(120, 20.5%, 90%, 0.85);
+  --sable-surface-container: hsla(120, 30%, 5%, 0.67);
+  --sable-surface-container-line: hsla(120, 35%, 30.94%, 0.85);
+  --sable-surface-on-container: hsla(120, 0%, 95%, 1);
+  --sable-primary-main: hsla(120, 25%, 34%, 0.85);
+  --sable-primary-on-main: hsla(120, 12.5%, 85%, 0.85);
 }
